--- a/app/src/main/res/layout/v_map_info_window.xml
+++ b/app/src/main/res/layout/v_map_info_window.xml
@@ -6,5 +6,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/info_text_view" />
+        android:id="@+id/info_text_view"
+        android:gravity="center" />
 </LinearLayout>
